--- a/myproject/myapp/templates/list.html
+++ b/myproject/myapp/templates/list.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Minimal Django File Upload Example</title>
+        <title>Pokedex - Machine Learning</title>
     </head>
 
     <body>
